# pelican-jsmin

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
pelican/plugins/jsmin/: __init__.py  jsmin.py  test_jsmin.py
pelican/plugins/jsmin/test_data/static/js/: script.js
pelican/plugins/jsmin/test_data/templates/: index.html
